Add Docker containerization, schema registry, Prometheus monitoring, and production-grade MQTT connector.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
     "protobuf>=4.0.0",
 ]
 
+[project.scripts]
+pspf = "pspf.cli.main:main"
+
 [project.urls]
 Homepage = "https://github.com/JosephMattHall/Python-Stream-Processing-Framework"
 Issues = "https://github.com/JosephMattHall/Python-Stream-Processing-Framework/issues"
@@ -39,6 +42,12 @@ dev = [
   "black",
   "isort",
   "ruff",
+]
+hardened = [
+    "aiokafka>=0.8.0",
+    "gmqtt>=0.6.12",
+    "opentelemetry-api",
+    "opentelemetry-sdk",
 ]
 
 [tool.mypy]
