--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,10 @@ dependencies = [
     "msgpack>=1.0.0",
     "valkey>=5.0.0",
     "protobuf>=4.0.0",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "prometheus-client>=0.17.0",
+    "pydantic-settings>=2.0.0",
 ]
 
 [project.scripts]
