Introduce comprehensive observability with Prometheus and Grafana, add a CLI for operational control, and enhance local log robustness with checksums and recovery.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,9 @@ nav:
   - Tutorial: tutorial.md
   - Architecture: architecture.md
   - Roadmap: roadmap.md
+  - Observability: observability.md
+  - Operations: operations.md
+  - CLI Reference: cli.md
   - API Reference:
       - Stream: api/stream.md
       - Backends: api/backends.md
